--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body {
-    padding-top: 70px;
+#login, #signup {
+    width: 500px;
+    margin: auto;
+    padding-top: 50px;
     padding-bottom: 40px;
-} p {
+}
+p {
     font-family: 'Roboto', sans-serif;
+}
+nav {
+    display: flex;
+    height: 60px;
+    width: 100%;
+    background: #9892C7;
+}
+nav ul {
+    display: flex;
+    align-items: center;
+}
+nav ul li {
+    height: 100%;
+    /* text-align: center; */
+    line-height: 60px;
+}
+nav ul li a {
+    display: block;
+    padding: 0 20px;
+}
+
+nav ul li a:hover {
+    background: #423F6A;
+}
+
+#logo {
+    margin-top: 8px;
+    margin-left: 15px;
+}
+#clogo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
 }
