--- a/css/add-task.css
+++ b/css/add-task.css
@@ -1,14 +1,60 @@
-section {
-    display: flex;
-    background-color: white;
+.bg{
+    background-image: linear-gradient(#ffffff, #D0cee7);
 }
 
-/* input[type="submit"]{
-    background: #9892C7;
-    color:white;
-} */
+section {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 50%;
+    padding:2em 3em;
+    margin: 10em;
+    box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
+    border-radius: 5px;
+}
+
+hr {
+    stroke-width: 10px;
+}
 
 button[type="submit"]{
     background: #9892C7;
     color:white;
+    font-size: 2em;
+    width:200px;
+    height:50px;
+    border: transparent;
+}
+
+#hint {
+    color:grey;
+}
+
+h1 {
+    font-weight: 500;
+}
+
+label{
+    font-weight: 300;
+    color:rbg(32,32,35);
+}
+
+input {
+    border: 1px solid rgb(153,153,153);
+    /* border-radius: 4px; */
+
+}
+
+/* NOTE:Placeholder values for the form */
+option,textarea,#date,#timeStart,#timeEnd {
+    font-weight: 300;
+    color:rbg(32,32,35);
+}
+
+textarea {
+    width:95%;
+}
+
+input[type="text"] {
+    width:70%;
 }
