--- a/css/add-task.css
+++ b/css/add-task.css
@@ -7,8 +7,9 @@ section {
     flex-direction: column;
     background-color: white;
     width: 50%;
-    padding:2em 3em;
-    margin: 10em;
+    padding:3em 3em;
+    margin: auto;
+    margin-top: 3em;
     box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
     border-radius: 5px;
 }
