--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,6 @@
 nav {
+    position: fixed;
+
     display: flex;
     height: 60px;
     width: 100%;
@@ -16,7 +18,7 @@ nav ul li {
 nav ul li a {
     display: block;
     padding: 0 20px;
-
+    color: white;
 }
 
 nav ul li a:hover {
