--- a/css/index.css
+++ b/css/index.css
@@ -34,8 +34,12 @@ nav ul li a:hover {
 
 }
 #logo {
-    margin-top: 8px;
-    margin-left: 15px;
+    margin-top: 15px;
+    margin-left: 30px;
+    height: 30px;
+    width: auto;
+    /* width: 40px; */
+    /* height: 100%; */
 }
 .username {
     margin-left: auto;
