--- a/css/nav.css
+++ b/css/nav.css
@@ -26,8 +26,10 @@ nav ul li a:hover {
 
 }
 #logo {
-    margin-top: 8px;
-    margin-left: 15px;
+    margin-top: 15px;
+    margin-left: 30px;
+    height: 30px;
+    width: auto;
 }
 .username {
     margin-left: auto;
