--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #login, #signup {
     width: 500px;
     margin: auto;
-    padding-top: 50px;
+    padding-top: 100px;
     padding-bottom: 40px;
 }
 p {
@@ -25,6 +25,7 @@ nav ul li {
 nav ul li a {
     display: block;
     padding: 0 20px;
+    color: white;
 }
 
 nav ul li a:hover {
