--- a/css/nav.css
+++ b/css/nav.css
@@ -53,3 +53,47 @@ nav ul li a:hover {
     /* cursor: pointer; */
     /* padding: 5px; */
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 10px;
+    top: 60px;
+    width: 130px;
+    /* height: 200px; */
+    background: #fff;
+    /* transition: all 1s ease; */
+    box-shadow:0px 6px 5px rgba(0, 0, 0,.2);
+    border-radius: 10px;
+}
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #fff;
+    position: absolute;
+    top: -5px;
+    right: 21px;
+}
+.show {
+    display: block;
+    /* top: 60px; */
+}
+.dropdown-content .option {
+    width: 100%;
+    /* height: 100%; */
+    padding: 10px 0;
+    /* background: var(--light-bg); */
+    display: block;
+}
+.dropdown-content .option li {
+    height: 30%;
+    /* color: var(--main-bg); */
+}
+.dropdown-content .option li a {
+    padding: 0 10px;
+    color: var(--main-bg);
+}
+.dropdown-content .option li a:hover {
+    color: white;
+}
