--- a/css/group.css
+++ b/css/group.css
@@ -68,3 +68,11 @@ input[type="submit"] {
     padding: 10px 20px;
     border-radius: 5px;
 }
+#output {
+    width: 100%;
+    /* height: 100px; */
+    background: white;
+}
+/* .add-members ol li {
+    list-style: ordered;
+} */
