--- a/css/add-task.css
+++ b/css/add-task.css
@@ -2,6 +2,9 @@
     background-image: linear-gradient(#ffffff, #D0cee7);
     width: 100%;
     height: 100%;
+    position: absolute;
+
+    /* overflow: hidden; */
 }
 
 section {
@@ -10,8 +13,9 @@ section {
     background-color: white;
     width: 50%;
     padding:3em 3em;
-    padding-top: 5em;
+    padding-top: 7em;
     margin: auto;
+    height: 100%;
     /* margin-top: 3em; */
     box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
     /* border-radius: 5px; */
