--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -12,6 +12,7 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
+    text-align: center;
 }
 p {
     font-family: 'Roboto', sans-serif;
@@ -24,7 +25,6 @@ p {
 }
 form{
     display: block;
-    padding: 20%;
 }
 input[type="submit"]{
     font-size: 1.5em;
@@ -43,11 +43,11 @@ input {
     border: 1px solid rgb(153,153,153);
 }
 input[type="text"], input[type="password"] {
-    width:100%;
+    width:60%;
     height: 25px;
 }
 input[type="color"]{
-    width: 100%;
+    width: 60%;
 }
 label{
     font-weight: 300;
