--- a/css/nav.css
+++ b/css/nav.css
@@ -97,3 +97,79 @@ nav ul li a:hover {
 .dropdown-content .option li a:hover {
     color: white;
 }
+
+/* CSS ANIMATIONS //////////////////////////// */
+@keyframes grow-and-shrink {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+@keyframes grow-and-shrink1 {
+0% {
+    transform: scale(1);
+}
+50% {
+    transform: scale(1.05);
+}
+100% {
+    transform: scale(1);
+}
+}
+
+#profile:hover {
+    animation: grow-and-shrink 1000ms;
+    animation-iteration-count: infinite; 
+    animation-timing-function: ease-in-out;
+    color: #59567c;
+    font-weight: 900;
+    font-size: 3.1rem;
+    background-color: #423F6A;
+    box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
+
+}
+
+li a[href="logout.php"]:hover,li a[href="index.php"]:hover ,li a[href="group.php"]:hover {
+    animation: grow-and-shrink1 1000ms;
+    animation-iteration-count: 1; 
+    animation-timing-function: ease-in-out;
+    border-radius: 1rem;
+    box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
+
+}
+
+@keyframes drop-in {
+    from {
+      transform:
+        rotate(-10deg) translateY(-100%);
+      opacity: 0;
+    }
+    to {
+      transform:
+        rotate(0deg) translateY(0%);
+      opacity: 1;
+    }
+  }
+
+nav {
+animation: drop-in 700ms;
+}
+
+nav:hover {
+    background-color: #7e78b8;
+}
+
+#logo:hover{
+    animation: grow-and-shrink 1000ms;
+    animation-iteration-count: infinite; 
+    animation-timing-function: ease-in-out;
+    box-shadow:0px 6px 5px rgba(0, 0, 0,.2);  
+
+}
+
